--- a/Css/style.css
+++ b/Css/style.css
@@ -1,7 +1,7 @@
 body{background-color: rgb(153, 156, 156);}
 
 .Letra {
-  color:  goldenrod;
+  color:  rgb(217, 165, 32);
 }
 
 
@@ -87,5 +87,28 @@ color:grey !important;
 }
 .core{
  color: black;
- margin-left: 10px;
+ text-align: left;
+ margin-top: 25px;
 }
+.loca {
+  margin-top: -100px;
+  margin-left: 30px;
+  border-image: auto;
+}
+.imga{
+  height: 500px;
+ }
+ #rodape{
+  background-color: rgb(92, 91, 91);
+  width: 1902px;
+  height: 38px;
+  margin-top: 1350px;
+  background-color: #333;
+ }
+ #img5 {
+   margin-left: 500px;
+   margin-top: 250px;
+   width: 50px;
+ }
+ 
+
