--- a/Css/cabeleleiro.css
+++ b/Css/cabeleleiro.css
@@ -6,8 +6,7 @@
 .lb2 {
     width: 190px;
     margin-top: -75px;
-    margin-left: 910px;
-}
+    margin-left: 910px;}
 .botao {
     margin-left: 648px;
     margin-top: 30px;
